--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="progress-con">
                             <p class="prog-text">87%</p>
                             <div class="progress">
-                                <span class="react"></span>
+                                <span class="qt"></span>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                         <div class="progress-con">
                             <p class="prog-text">75%</p>
                             <div class="progress">
-                                <span class="node"></span>
+                                <span class="flt"></span>
                             </div>
                         </div>
                     </div>
